--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,36 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-dev-debug.log
 
-# Dependency directories
-node_modules/
+# Temporary restructuring files
+/temp_restructure
+/pdf-combiner
 
-# Environment variables
-.env
-
-# Editor directories and files
+# IDE and editor files
 .idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+*.swp
+*~
 
-# OS specific
-.DS_Store
-
-# Task files
-tasks.json
-tasks/ 
+# Environment variables
+.env 
