--- a/pdf-combiner/package.json
+++ b/pdf-combiner/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.1.91",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
