Implement notification system for validation errors (task 4.3)

--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -191,7 +191,7 @@
             2
           ],
           "details": "1. Create a NotificationService class/module to manage notifications\n2. Implement methods for different notification types (error, warning, info, success)\n3. Design notification UI components with appropriate styling for each type\n4. Add support for dismissible notifications with timeout options\n5. Implement notification queuing for multiple simultaneous messages\n6. Test notifications with different message types and lengths\n7. Ensure notifications are accessible (screen readers, keyboard navigation)\n8. Add unit tests for notification logic and integration tests for UI components",
-          "status": "pending",
+          "status": "done",
           "parentTaskId": 4
         },
         {
