--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -225,7 +225,7 @@
       "id": 5,
       "title": "Integrate PDF.js for thumbnail generation",
       "description": "Implement PDF parsing and thumbnail generation for uploaded PDF files using PDF.js.",
-      "status": "pending",
+      "status": "done",
       "dependencies": [
         4
       ],
@@ -310,7 +310,66 @@
       ],
       "priority": "high",
       "details": "Develop a preview panel that displays thumbnails in a grid or list layout. Implement document grouping to visually separate different uploaded files. Add metadata display (filename, page count) for each document. Create pagination or virtual scrolling for efficient rendering of many thumbnails. Implement zoom controls for thumbnail size adjustment. Ensure preview area is responsive and adapts to different screen sizes.",
-      "testStrategy": "Test preview functionality with multiple documents of varying page counts. Verify all thumbnails load correctly. Test performance with large numbers of pages. Ensure responsive behavior on different screen sizes."
+      "testStrategy": "Test preview functionality with multiple documents of varying page counts. Verify all thumbnails load correctly. Test performance with large numbers of pages. Ensure responsive behavior on different screen sizes.",
+      "subtasks": [
+        {
+          "id": 1,
+          "title": "Create basic thumbnail grid/list layout structure",
+          "description": "Implement the foundational UI structure for displaying document thumbnails in both grid and list layouts with toggle functionality.",
+          "dependencies": [],
+          "details": "Implementation details:\n1. Create a container component for the preview panel with configurable layout options (grid/list)\n2. Implement a layout toggle control to switch between grid and list views\n3. Design the basic thumbnail component that will display individual document pages\n4. Set up CSS Grid and Flexbox layouts for both display modes\n5. Ensure the container is responsive using media queries for different screen sizes\n6. Add placeholder styling for thumbnails before actual rendering\n7. Test the layout structure with mock data to verify responsiveness\n8. Implement basic keyboard navigation between thumbnails for accessibility",
+          "status": "done",
+          "parentTaskId": 6
+        },
+        {
+          "id": 2,
+          "title": "Implement document grouping and metadata display",
+          "description": "Add functionality to group thumbnails by their source document and display relevant metadata for each document and page.",
+          "dependencies": [
+            1
+          ],
+          "details": "Implementation details:\n1. Create a document group component that visually separates different uploaded files\n2. Add document header with filename display for each group\n3. Implement metadata display showing page count, file size, and upload date\n4. Add page number indicators for individual page thumbnails\n5. Create collapsible/expandable document groups for better organization\n6. Implement sorting options for document groups (by name, date, size)\n7. Add tooltips for thumbnails showing additional metadata on hover\n8. Test with various document types to ensure metadata is correctly displayed\n9. Ensure accessibility by adding proper ARIA attributes for screen readers",
+          "status": "pending",
+          "parentTaskId": 6
+        },
+        {
+          "id": 3,
+          "title": "Develop PDF thumbnail rendering functionality",
+          "description": "Implement the core functionality to render actual PDF page thumbnails from uploaded documents.",
+          "dependencies": [
+            1
+          ],
+          "details": "Implementation details:\n1. Integrate a PDF rendering library (like PDF.js) to generate thumbnails\n2. Create a service to manage thumbnail generation and caching\n3. Implement efficient rendering that only processes visible thumbnails\n4. Add loading states/placeholders while thumbnails are being generated\n5. Implement error handling for failed thumbnail generation\n6. Set up appropriate image quality and size optimization for thumbnails\n7. Add fallback display for non-renderable pages\n8. Test with various PDF types including text-heavy, image-heavy, and mixed content\n9. Implement memory management to prevent leaks during thumbnail generation",
+          "status": "pending",
+          "parentTaskId": 6
+        },
+        {
+          "id": 4,
+          "title": "Implement pagination or virtual scrolling",
+          "description": "Add efficient rendering capabilities to handle large numbers of thumbnails through pagination or virtual scrolling.",
+          "dependencies": [
+            1,
+            3
+          ],
+          "details": "Implementation details:\n1. Evaluate and choose between pagination and virtual scrolling based on UX requirements\n2. If pagination: implement page controls, page size options, and page navigation\n3. If virtual scrolling: implement a virtualized list that only renders visible items\n4. Add scroll position memory to maintain position when returning to the preview\n5. Implement lazy loading of thumbnails as they scroll into view\n6. Add smooth animations for pagination/scrolling transitions\n7. Optimize render performance by recycling DOM elements\n8. Test with large documents (100+ pages) to verify performance\n9. Ensure keyboard accessibility for navigating between pages or through virtual list",
+          "status": "pending",
+          "parentTaskId": 6
+        },
+        {
+          "id": 5,
+          "title": "Add zoom controls and final responsive adjustments",
+          "description": "Implement thumbnail size adjustment controls and finalize responsive behavior across all screen sizes.",
+          "dependencies": [
+            1,
+            2,
+            3,
+            4
+          ],
+          "details": "Implementation details:\n1. Create zoom in/out controls to adjust thumbnail size\n2. Implement a zoom slider for fine-grained control\n3. Add keyboard shortcuts for zooming (e.g., Ctrl+/Ctrl-)\n4. Store user's preferred zoom level in local storage\n5. Adjust grid/list layouts dynamically based on zoom level\n6. Finalize responsive design for mobile, tablet, and desktop views\n7. Implement touch gestures for mobile (pinch to zoom, swipe to navigate)\n8. Add layout optimizations for different device orientations\n9. Perform comprehensive testing across different devices and screen sizes\n10. Ensure all UI elements remain accessible at all zoom levels",
+          "status": "pending",
+          "parentTaskId": 6
+        }
+      ]
     },
     {
       "id": 7,
