Update default theme to dark mode and fix formatting issues

--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -297,6 +297,15 @@
           "status": "done",
           "dependencies": [],
           "parentTaskId": 5
+        },
+        {
+          "id": 7,
+          "title": "Implement Progressive Loading for Large Documents",
+          "description": "Create components that can display thumbnails progressively for large PDFs without impacting performance",
+          "details": "This task involves building a component that can efficiently handle large PDFs by:\n1. Using virtualization to only render visible thumbnails\n2. Implementing a thumbnail caching system to manage memory usage\n3. Adding pagination controls for better navigation\n4. Handling thumbnail prefetching to improve perceived performance\n5. Adding progress indicators during loading",
+          "status": "done",
+          "dependencies": [],
+          "parentTaskId": 5
         }
       ]
     },
