--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     ]
   },
   "devDependencies": {
+    "@types/cypress": "^0.1.6",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
+    "cypress": "^14.3.2",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
