--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.1.91",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^8.1.1",
