--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -313,7 +313,7 @@
       "id": 6,
       "title": "Implement document preview functionality",
       "description": "Create a preview interface that displays thumbnails of all uploaded PDF documents and their pages.",
-      "status": "pending",
+      "status": "done",
       "dependencies": [
         5
       ],
@@ -338,7 +338,7 @@
             1
           ],
           "details": "Implementation details:\n1. Create a document group component that visually separates different uploaded files\n2. Add document header with filename display for each group\n3. Implement metadata display showing page count, file size, and upload date\n4. Add page number indicators for individual page thumbnails\n5. Create collapsible/expandable document groups for better organization\n6. Implement sorting options for document groups (by name, date, size)\n7. Add tooltips for thumbnails showing additional metadata on hover\n8. Test with various document types to ensure metadata is correctly displayed\n9. Ensure accessibility by adding proper ARIA attributes for screen readers",
-          "status": "pending",
+          "status": "done",
           "parentTaskId": 6
         },
         {
@@ -349,7 +349,7 @@
             1
           ],
           "details": "Implementation details:\n1. Integrate a PDF rendering library (like PDF.js) to generate thumbnails\n2. Create a service to manage thumbnail generation and caching\n3. Implement efficient rendering that only processes visible thumbnails\n4. Add loading states/placeholders while thumbnails are being generated\n5. Implement error handling for failed thumbnail generation\n6. Set up appropriate image quality and size optimization for thumbnails\n7. Add fallback display for non-renderable pages\n8. Test with various PDF types including text-heavy, image-heavy, and mixed content\n9. Implement memory management to prevent leaks during thumbnail generation",
-          "status": "pending",
+          "status": "done",
           "parentTaskId": 6
         },
         {
@@ -361,7 +361,7 @@
             3
           ],
           "details": "Implementation details:\n1. Evaluate and choose between pagination and virtual scrolling based on UX requirements\n2. If pagination: implement page controls, page size options, and page navigation\n3. If virtual scrolling: implement a virtualized list that only renders visible items\n4. Add scroll position memory to maintain position when returning to the preview\n5. Implement lazy loading of thumbnails as they scroll into view\n6. Add smooth animations for pagination/scrolling transitions\n7. Optimize render performance by recycling DOM elements\n8. Test with large documents (100+ pages) to verify performance\n9. Ensure keyboard accessibility for navigating between pages or through virtual list",
-          "status": "pending",
+          "status": "done",
           "parentTaskId": 6
         },
         {
@@ -374,8 +374,8 @@
             3,
             4
           ],
-          "details": "Implementation details:\n1. Create zoom in/out controls to adjust thumbnail size\n2. Implement a zoom slider for fine-grained control\n3. Add keyboard shortcuts for zooming (e.g., Ctrl+/Ctrl-)\n4. Store user's preferred zoom level in local storage\n5. Adjust grid/list layouts dynamically based on zoom level\n6. Finalize responsive design for mobile, tablet, and desktop views\n7. Implement touch gestures for mobile (pinch to zoom, swipe to navigate)\n8. Add layout optimizations for different device orientations\n9. Perform comprehensive testing across different devices and screen sizes\n10. Ensure all UI elements remain accessible at all zoom levels",
-          "status": "pending",
+          "details": "Implementation details:\n1. Create zoom in/out controls to adjust thumbnail size\n2. Implement a zoom slider for fine-grained control\n3. Add keyboard shortcuts for zooming (e.g., Ctrl+/Ctrl-)\n4. Store user's preferred zoom level in local storage\n5. Adjust grid/list layouts dynamically based on zoom level\n6. Finalize responsive design for mobile, tablet, and desktop views\n7. Implement touch gestures for mobile (pinch to zoom, swipe to navigate)\n8. Add layout optimizations for different device orientations\n9. Perform comprehensive testing across different devices and screen sizes\n10. Ensure all UI elements remain accessible at all zoom levels\n\n<info added on 2025-04-25T00:34:59.239Z>\nFor the zoom controls implementation:\n\n```javascript\n// Zoom control constants\nconst MIN_ZOOM = 0.5;  // 50% of original size\nconst MAX_ZOOM = 2.0;  // 200% of original size\nconst DEFAULT_ZOOM = 1.0;\nconst ZOOM_STEP = 0.1;\n\n// Example implementation of zoom controls\nfunction initializeZoomControls() {\n  // Get stored zoom level or use default\n  const storedZoom = localStorage.getItem('userZoomPreference') || DEFAULT_ZOOM;\n  let currentZoom = parseFloat(storedZoom);\n  \n  // Apply initial zoom\n  applyZoomLevel(currentZoom);\n  \n  // Set up slider value\n  document.getElementById('zoomSlider').value = currentZoom * 100;\n  \n  // Event listeners\n  document.getElementById('zoomIn').addEventListener('click', () => {\n    updateZoom(Math.min(currentZoom + ZOOM_STEP, MAX_ZOOM));\n  });\n  \n  document.getElementById('zoomOut').addEventListener('click', () => {\n    updateZoom(Math.max(currentZoom - ZOOM_STEP, MIN_ZOOM));\n  });\n  \n  document.getElementById('zoomSlider').addEventListener('input', (e) => {\n    updateZoom(parseInt(e.target.value) / 100);\n  });\n  \n  // Keyboard shortcuts\n  document.addEventListener('keydown', (e) => {\n    if (e.ctrlKey && e.key === '+') {\n      e.preventDefault();\n      updateZoom(Math.min(currentZoom + ZOOM_STEP, MAX_ZOOM));\n    } else if (e.ctrlKey && e.key === '-') {\n      e.preventDefault();\n      updateZoom(Math.max(currentZoom - ZOOM_STEP, MIN_ZOOM));\n    }\n  });\n  \n  // Touch gesture implementation for pinch zoom\n  const thumbnailContainer = document.getElementById('thumbnailContainer');\n  let initialDistance = 0;\n  \n  thumbnailContainer.addEventListener('touchstart', (e) => {\n    if (e.touches.length === 2) {\n      initialDistance = getTouchDistance(e.touches);\n    }\n  });\n  \n  thumbnailContainer.addEventListener('touchmove', (e) => {\n    if (e.touches.length === 2) {\n      const currentDistance = getTouchDistance(e.touches);\n      const scaleFactor = currentDistance / initialDistance;\n      const newZoom = Math.min(Math.max(currentZoom * scaleFactor, MIN_ZOOM), MAX_ZOOM);\n      updateZoom(newZoom);\n      initialDistance = currentDistance;\n    }\n  });\n  \n  function updateZoom(newZoom) {\n    currentZoom = newZoom;\n    applyZoomLevel(currentZoom);\n    localStorage.setItem('userZoomPreference', currentZoom);\n  }\n}\n\nfunction getTouchDistance(touches) {\n  return Math.hypot(\n    touches[0].clientX - touches[1].clientX,\n    touches[0].clientY - touches[1].clientY\n  );\n}\n\nfunction applyZoomLevel(zoom) {\n  // Apply zoom to thumbnails using CSS variables\n  document.documentElement.style.setProperty('--thumbnail-scale', zoom);\n  \n  // Dynamically adjust grid layout based on zoom level\n  const container = document.getElementById('thumbnailContainer');\n  const containerWidth = container.clientWidth;\n  const baseThumbWidth = 120; // Base thumbnail width in pixels\n  const scaledWidth = baseThumbWidth * zoom;\n  const itemsPerRow = Math.floor(containerWidth / scaledWidth);\n  \n  document.documentElement.style.setProperty('--items-per-row', itemsPerRow);\n}\n```\n\nFor responsive design implementation, include media queries:\n\n```css\n/* Base styles for thumbnails */\n.thumbnail {\n  width: calc(var(--base-thumb-size) * var(--thumbnail-scale));\n  transition: width 0.2s ease;\n}\n\n/* Responsive breakpoints */\n@media (max-width: 768px) {\n  :root {\n    --base-thumb-size: 100px;\n  }\n  \n  /* Adjust controls for touch interfaces */\n  .zoom-controls {\n    position: fixed;\n    bottom: 0;\n    width: 100%;\n    background: rgba(255,255,255,0.9);\n    padding: 10px;\n  }\n}\n\n@media (max-width: 480px) {\n  :root {\n    --base-thumb-size: 80px;\n  }\n  \n  /* Switch to single column layout on very small screens */\n  .thumbnail-container {\n    grid-template-columns: 1fr !important;\n  }\n}\n\n/* Orientation changes */\n@media (orientation: landscape) and (max-width: 900px) {\n  .thumbnail-container {\n    height: 80vh;\n    overflow-y: auto;\n  }\n}\n```\n</info added on 2025-04-25T00:34:59.239Z>",
+          "status": "done",
           "parentTaskId": 6
         }
       ]
@@ -390,7 +390,62 @@
       ],
       "priority": "medium",
       "details": "Implement drag-and-drop functionality for document reordering using React DnD or similar library. Create visual indicators for drag operations and drop targets. Maintain document order state that will be used for the final PDF combination. Add keyboard shortcuts for moving documents up/down in the sequence. Ensure drag operations work smoothly with appropriate animations and feedback. Implement undo/redo functionality for reordering operations.",
-      "testStrategy": "Test drag-and-drop reordering with mouse and touch interactions. Verify keyboard shortcuts work correctly. Ensure the final document order is correctly maintained in state. Test undo/redo functionality for reordering operations."
+      "testStrategy": "Test drag-and-drop reordering with mouse and touch interactions. Verify keyboard shortcuts work correctly. Ensure the final document order is correctly maintained in state. Test undo/redo functionality for reordering operations.",
+      "subtasks": [
+        {
+          "id": 1,
+          "title": "Set up React DnD library and basic document list component",
+          "description": "Install and configure React DnD library and create the basic document list component structure that will support drag and drop functionality.",
+          "dependencies": [],
+          "details": "1. Install React DnD and its HTML5 backend: `npm install react-dnd react-dnd-html5-backend`\n2. Set up DnD context provider in the application\n3. Create a DocumentList component to display the list of documents\n4. Implement a Document component that will be draggable\n5. Create initial state management for document order using React state or context\n6. Test the basic rendering of documents without drag functionality\n7. Ensure the component structure is accessible and works with screen readers",
+          "status": "done",
+          "parentTaskId": 7
+        },
+        {
+          "id": 2,
+          "title": "Implement drag and drop functionality with visual indicators",
+          "description": "Add drag and drop capabilities to the document list with appropriate visual feedback during drag operations.",
+          "dependencies": [
+            1
+          ],
+          "details": "1. Define drag sources for document items using React DnD's useDrag hook\n2. Implement drop targets using useDrops hook\n3. Create visual indicators for:\n   - Items being dragged (opacity change, shadow)\n   - Drop zones (highlighted areas, gap indicators)\n   - Invalid drop targets\n4. Add smooth CSS transitions for drag operations\n5. Implement the reordering logic when items are dropped\n6. Test drag and drop functionality across different positions in the list\n7. Ensure visual indicators are clear and provide good user feedback",
+          "status": "done",
+          "parentTaskId": 7
+        },
+        {
+          "id": 3,
+          "title": "Implement document order state management and persistence",
+          "description": "Create a robust state management system for document order that persists changes and can be used for final PDF combination.",
+          "dependencies": [
+            2
+          ],
+          "details": "1. Refine the state management approach (use Redux or Context API if not already implemented)\n2. Create actions/reducers for document reordering operations\n3. Implement functions to:\n   - Move documents up/down\n   - Insert documents at specific positions\n   - Remove documents from the sequence\n4. Add persistence of document order (localStorage or backend API)\n5. Create a mechanism to retrieve the current order for PDF combination\n6. Test state updates with various reordering scenarios\n7. Ensure state consistency across component re-renders",
+          "status": "done",
+          "parentTaskId": 7
+        },
+        {
+          "id": 4,
+          "title": "Add keyboard shortcuts and accessibility features",
+          "description": "Implement keyboard shortcuts for document reordering and ensure the interface is fully accessible.",
+          "dependencies": [
+            3
+          ],
+          "details": "1. Add keyboard shortcuts for:\n   - Moving documents up (Alt+Up or similar)\n   - Moving documents down (Alt+Down or similar)\n   - Moving to top/bottom of list\n2. Create a keyboard shortcut help modal or tooltip\n3. Implement focus management during keyboard operations\n4. Add ARIA attributes for drag and drop operations\n5. Ensure all interactive elements have appropriate roles and labels\n6. Test keyboard navigation thoroughly\n7. Verify accessibility with screen readers and automated testing tools",
+          "status": "done",
+          "parentTaskId": 7
+        },
+        {
+          "id": 5,
+          "title": "Implement undo/redo functionality for reordering operations",
+          "description": "Create an undo/redo system that allows users to reverse or replay document reordering actions.",
+          "dependencies": [
+            3
+          ],
+          "details": "1. Design a command pattern or history stack for tracking reordering operations\n2. Implement undo and redo functions that restore previous/next states\n3. Add keyboard shortcuts for undo (Ctrl+Z) and redo (Ctrl+Y or Ctrl+Shift+Z)\n4. Create UI buttons for undo/redo operations\n5. Add visual feedback when undo/redo is performed\n6. Implement state management for the history stack\n7. Test complex sequences of operations with undo/redo\n8. Ensure history state is properly maintained during session",
+          "status": "done",
+          "parentTaskId": 7
+        }
+      ]
     },
     {
       "id": 8,
